<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_layout_pidding"
        android:background="@color/grey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/element_names"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_size" />

        <TextView
            android:id="@+id/day_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/shelf_life"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_size" />

        <TextView
            android:id="@+id/status_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/qualified"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/grey" />


</LinearLayout>