<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/laboratory"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_layout_pidding_max"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/laboratory"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <TextView
                android:id="@+id/time"
                android:layout_width="150dp"
                android:layout_height="@dimen/text_layout_pidding_max"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />


            <TextView
                android:id="@+id/consignee"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_layout_pidding_max"
                android:layout_below="@+id/laboratory"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/consignee"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@+id/consignee"
                android:layout_marginTop="10dp"
                android:background="@color/grey1" />


            <TextView
                android:id="@+id/submission_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_layout_pidding_max"
                android:layout_below="@+id/line"
                android:background="@color/grey1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/submission_list"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_layout_pidding_max"
                android:layout_below="@+id/submission_list"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/delivery_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_content_size" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="时间"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_content_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/consignor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_content_size" />

            </LinearLayout>

            <com.example.administrator.landapplication.ui.view.AutoListView
                android:id="@+id/charge_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout"
                android:background="@color/white"
                android:divider="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:listSelector="@color/transparent"
                android:overScrollMode="never" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>