<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="190dp">

        <TextView
            android:id="@+id/text_user"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/text_user"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:background="@color/transparent"
            android:hint="@string/hint_user"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/corners_edittext_cursor"
            android:textSize="16dp" />

        <View
            android:id="@+id/delet_username_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/delet"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_below="@+id/text_user"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_user"
            android:layout_marginLeft="70dp"
            android:background="@color/transparent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/corners_edittext_cursor"
            android:textSize="16dp" />

        <View
            android:id="@+id/delet_password_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/delet_username_view"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/delet"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/text_password"
            android:background="@color/gray"
            android:visibility="visible" />

    </RelativeLayout>


    <TextView
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_bac"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="当前版本 1.0.0"
        android:textColor="@color/black"
        android:textSize="12dp" />

</RelativeLayout>